RESOLVED FIXED123757
Subresource loads should not prevent page throttling
https://bugs.webkit.org/show_bug.cgi?id=123757
Summary Subresource loads should not prevent page throttling
Gavin Barraclough
Reported 2013-11-04 14:56:25 PST
Some pages leave long running XHRs open, thee should not inhibit processes suspension.
Attachments
Fix (10.88 KB, patch)
2013-11-04 15:01 PST, Gavin Barraclough
darin: review+
eflews.bot: commit-queue-
New fix (3.46 KB, patch)
2013-11-05 13:30 PST, Gavin Barraclough
ap: review+
Gavin Barraclough
Comment 1 2013-11-04 15:01:02 PST
EFL EWS Bot
Comment 2 2013-11-04 15:33:01 PST
EFL EWS Bot
Comment 3 2013-11-04 15:51:08 PST
kov's GTK+ EWS bot
Comment 4 2013-11-04 15:52:44 PST
Darin Adler
Comment 5 2013-11-04 17:19:32 PST
Comment on attachment 215956 [details] Fix View in context: https://bugs.webkit.org/attachment.cgi?id=215956&action=review Patch looks fine, but seems you missed call sites in the GTK and EFL ports. > Source/WebCore/loader/ResourceLoaderOptions.h:82 > + ResourceLoaderOptions(SendCallbackPolicy sendLoadCallbacks, ContentSniffingPolicy sniffContent, DataBufferingPolicy dataBufferingPolicy, StoredCredentials allowCredentials, ClientCredentialPolicy credentialPolicy, SecurityCheckPolicy securityCheck, RequestOriginPolicy requestOriginPolicy, RequestIsXMLHTTP requestIsXMLHTTP) Good that this argument is an enum. > Source/WebCore/loader/ResourceLoaderOptions.h:100 > + RequestIsXMLHTTP requestIsXMLHTTP; But seems to me this should be a bool.
Gavin Barraclough
Comment 6 2013-11-05 13:23:07 PST
Maciej doesn't like treating XHRs differently from other requests, and has suggested simplifying the page-is-loading check to simply be frame loading + hysteresis. New patch forthcoming.
Gavin Barraclough
Comment 7 2013-11-05 13:30:33 PST
Alexey Proskuryakov
Comment 8 2013-11-05 15:15:26 PST
Comment on attachment 216069 [details] New fix Looks like we should question whether we should take an activity assertion during frame loads either. If we don't need them for subresources, maybe we don't need it for any loads? r=me
Gavin Barraclough
Comment 9 2013-11-05 17:25:03 PST
Fixed in r158702
Note You need to log in before you can comment on or make changes to this bug.