Source/WebCore/loader/SubresourceLoader.cpp
@@ -109,8 +109,6 @@ bool SubresourceLoader::init(const ResourceRequest& request)
 
     ASSERT(!reachedTerminalState());
     m_state = Initialized;
-    if (m_frame && m_frame->page() && !m_activityAssertion)
-        m_activityAssertion = m_frame->page()->createActivityToken();
     m_documentLoader->addSubresourceLoader(this);
     return true;
 }
@@ -260,7 +258,6 @@ bool SubresourceLoader::checkForHTTPStatusCodeError()
         return false;
 
     m_state = Finishing;
-    m_activityAssertion = nullptr;
     m_resource->error(CachedResource::LoadError);
     cancel();
     return true;
@@ -278,7 +275,6 @@ void SubresourceLoader::didFinishLoading(double finishTime)
     Ref<SubresourceLoader> protect(*this);
     CachedResourceHandle<CachedResource> protectResource(m_resource);
     m_state = Finishing;
-    m_activityAssertion = nullptr;
     m_resource->setLoadFinishTime(finishTime);
     m_resource->finishLoading(resourceData());
 
@@ -303,7 +299,6 @@ void SubresourceLoader::didFail(const ResourceError& error)
     Ref<SubresourceLoader> protect(*this);
     CachedResourceHandle<CachedResource> protectResource(m_resource);
     m_state = Finishing;
-    m_activityAssertion = nullptr;
     if (m_resource->resourceToRevalidate())
         memoryCache()->revalidationFailed(m_resource);
     m_resource->setResourceError(error);
@@ -326,7 +321,6 @@ void SubresourceLoader::willCancel(const ResourceError& error)
 
     Ref<SubresourceLoader> protect(*this);
     m_state = Finishing;
-    m_activityAssertion = nullptr;
     if (m_resource->resourceToRevalidate())
         memoryCache()->revalidationFailed(m_resource);
     m_resource->setResourceError(error);
